--- a/style.css
+++ b/style.css
@@ -1,9 +1,52 @@
 body{
+	margin: 0;
 	background-color: rgb(241, 236, 188);	
 }
 * {
 	font-family:arial;
 	box-sizing: border-box;
+}
+.header{
+	position:sticky;
+	top:0;
+	background-color: #333333;
+}
+#logo{
+	float:left;
+	height:50px;
+}
+ul.nav{
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	overflow: hidden;
+}
+.nav li{
+	float:right;
+}
+#user{
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+.nav li a, #user{
+	display:inline-block;
+	padding:16px;
+	text-decoration:none;
+	color:white; 
+}
+.nav li a:link{
+	color:white;
+}
+.nav li a:visited{
+	color:white;
+}
+.nav li a:hover{
+	background-color: green;
+	cursor: pointer;
+}
+.nav li a:active{
+	color:yellow;
+	background-color:black;
 }
 .logo{
 	float:left;
@@ -69,3 +112,13 @@ input::-webkit-inner-spin-button {
 /* input[type=number] {
   -moz-appearance: textfield;
 } */
+.footer{
+    position: relative;
+    bottom: 0;
+    margin-top: 30px;
+    background-color:#3c3c3c;
+    padding : 5px;
+    color: #ffffff;
+	text-align:center;
+	font-size: small;
+}
