--- a/Login.css
+++ b/Login.css
@@ -5,8 +5,32 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed; 
 	background-size: 100% 100%;
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+header {
+    position: relative;
+    width : 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    background-color: white;
+}
+
+#logo, .company-name {
+    margin: 10px 10px;
+    height: 50px;
+    float: left;
+    background: transparent;
+    text-decoration: none;
+}
+
+.company-name {
+    margin: 25px 10px;
+    font-variant: small-caps;
+    color: #fff;
+}
+
 .Login-form{
     width: 280px;
     background: rgba(0,0,0,0.7);
@@ -61,4 +85,18 @@ body{
     font-size: 18px;
     cursor: pointer;
     margin: 12px 0;
+}
+footer {
+    width: 100%;
+    height: 50px;
+    background-color: #232323;
+    position: absolute;
+    bottom: 0 ;
+    color: #fff;
+    text-align: center;
+    
+}
+footer p {
+    font-size: small;
+    font-weight: 500;
 }
