--- a/Signupstyle.css
+++ b/Signupstyle.css
@@ -4,13 +4,72 @@ body{
     background-image: url('images/bg.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed; 
-	background-size: 100% 100%;
+    background-size: 100% 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+header {
+    position: relative;
+    width : 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    background-color: white;
+}
+
+#logo, .company-name {
+    margin: 10px 10px;
+    height: 50px;
+    float: left;
+    background: transparent;
+    text-decoration: none;
+}
+
+.company-name {
+    margin: 25px 10px;
+    font-variant: small-caps;
+    
+    color: #fff;
+}
+
+/* nav {
+    float: right;
+}
+
+header p {
+    color: #fff;
+}
+
+header::after {
+    clear: both;
+}
+
+nav ul {
+    margin: 10px 10px;
+    padding: 0;
+    display: flex;
+}
+
+nav ul li {
+    list-style-type: none;
+}
+
+nav ul li a {
+    display: block;
+    text-decoration: none;
+    padding: 10px 20px;
+    color: #000;
+    
+}
+
+nav ul li a:hover {
+    background-color: #069370;
+} */
 
 .SignupForm{
     width: 300px;
     background: rgba(0,0,0,0.7);
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif;*/
     position: absolute;
     top: 50%;
     left: 50%;
@@ -67,4 +126,18 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 #message {
     color: red;
     font-size: 14px;
+}
+footer {
+    width: 100%;
+    height: 50px;
+    background-color: #232323;
+    position: absolute;
+    bottom: 0 ;
+    color: #fff;
+    text-align: center;
+    
+}
+footer p {
+    font-size: small;
+    font-weight: 500;
 }
