--- a/registrationFormStyle.css
+++ b/registrationFormStyle.css
@@ -123,3 +123,19 @@ input::-webkit-inner-spin-button {
 	text-align:center;
 	font-size: small;
 }
+
+input, select {
+    /* border: 5px solid white;  */
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    /* box-shadow: 
+       		0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1);  */
+    /* padding: 15px; */
+    /* background: rgba(255,255,255,0.5); */
+    /* margin: 0 0 10px 0; */
+}
