--- a/admissionPageStyle.css
+++ b/admissionPageStyle.css
@@ -15,6 +15,12 @@ body{
 	float:left;
 	height:50px;
 }
+#Company-name {
+	color: #fff;
+	font-variant: small-caps;
+	float: left;
+	margin-left: 10px;
+}
 ul.nav{
 	list-style-type:none;
 	margin:0;
