--- a/admissionPageStyle.css
+++ b/admissionPageStyle.css
@@ -146,3 +146,7 @@ input, select {
     /* background: rgba(255,255,255,0.5); */
     /* margin: 0 0 10px 0; */
 }
+
+input[type=file] {
+	cursor: pointer;
+}
